# cis7000-notebook

./: .gitignore
backend/: app.py  pyproject.toml
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
